--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
