--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
-    "sort-by": "^1.2.0"
+    "scheduler": "^0.23.0",
+    "sort-by": "^1.2.0",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
